fix: resolve code smell